--- a/Happy-Hour/src/main/resources/templates/user-view.html
+++ b/Happy-Hour/src/main/resources/templates/user-view.html
@@ -21,6 +21,11 @@
                     <td th:text="${happyHour.getStandardDayTime()}"></td>
                 </tr>
                 </tbody>
+                <tr>
+                <td>
+                    <a th:href="${happy.website}" th:text="${happy.website}" target="_blank"></a>
+                </td>
+                </tr>
 
             </table>
 
