fixed url link in owner-home and user-view

--- a/Happy-Hour/src/main/resources/templates/owner-home.html
+++ b/Happy-Hour/src/main/resources/templates/owner-home.html
@@ -79,7 +79,7 @@
                                         <td th:text="${happyHour.getStandardDayTime()}"></td>
                                         <td th:text="${happyHour.address}"></td>
                                         <<td>
-                                        <a th:href="${happy.website}" th:text="${happy.website}" target="_blank"></a>
+                                        <a th:href="${happyHour.website}" th:text="${happyHour.website}" target="_blank"></a>
                                     </td>
                                     </tr>
                 </tbody>
