--- a/Happy-Hour/src/main/resources/templates/user-view.html
+++ b/Happy-Hour/src/main/resources/templates/user-view.html
@@ -23,7 +23,7 @@
                 </tbody>
                 <tr>
                 <td>
-                    <a th:href="${happy.website}" th:text="${happy.website}" target="_blank"></a>
+                    <a th:href="${happyHour.website}" th:text="${happyHour.website}" target="_blank"></a>
                 </td>
                 </tr>
 
