dynamic login button in nav-bar and index

--- a/Happy-Hour/src/main/resources/templates/fragments.html
+++ b/Happy-Hour/src/main/resources/templates/fragments.html
@@ -24,7 +24,9 @@
 <div th:fragment="navbar" class="navbar-header d-flex justify-content-flex-start text-center mb-4 w-100">
     <a th:href="@{/}" class="navbar-brand m-0 px-1 border">Home</a>
     <p th:text="${title}" class="navbar-brand m-0 w-100 border"></p>
-    <a sec:authorize="isAuthenticated()" th:href="@{/logout}" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Logout</a>
+    <a class="nav-link" th:href="@{/owner-login}" sec:authorize="!isAuthenticated()">Log In</a>
+    <form th:action="@{/logout}" method="post" name="logoutForm"></form>
+    <a class="nav-link" href="#" sec:authorize="isAuthenticated()"  onclick="document.logoutForm.submit()">Log Out</a>
 </div>
 <div th:fragment="search">
     <form th:action="@{results}" method="post" class="d-flex flex-column">
