created branch, commented out all CSS styling in main CSS file

--- a/Happy-Hour/src/main/resources/static/css/happyhour.css
+++ b/Happy-Hour/src/main/resources/static/css/happyhour.css
@@ -1,3 +1,4 @@
+/*
 header,body{
     background: #D8801A !important;
 }
@@ -100,4 +101,4 @@ display:none;
 ul#indexDay li{
 height:20%;
  display:inline;
- }
+ }*/
