--- a/Happy-Hour/src/main/resources/templates/index.html
+++ b/Happy-Hour/src/main/resources/templates/index.html
@@ -5,48 +5,33 @@
 <head th:replace="fragments :: head">
 </head>
 <title th:text="${title}"></title>
-<body >
+<body>
 <div class="bg">
-    <div class="container h-100" >
-        <div class="d-flex justify-content-end p-2" >
-            <div>
-                <a class="nav-link" th:href="@{/owner-login}" sec:authorize="!isAuthenticated()">Log In</a>
-                <form th:action="@{/logout}" method="post" name="logoutForm"></form>
-                <a class="nav-link" href="#" sec:authorize="isAuthenticated()"  onclick="document.logoutForm.submit()">Log Out</a>
-            </div>
-<!--            <a th:href="@{'/owner-login'}" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Login</a>-->
-        </div>
-
-<!--        SAMPLE VERSION OF USE-->
-<!--        <div sec:authorize="isAuthenticated()">-->
-<!--            <span sec:authentication="name"></span>-->
-<!--            This content is only shown to authenticated users.-->
-<!--        </div>-->
-        <div class="d-flex justify-content-center" style="height:25%">
-            <div th:replace="fragments :: search"></div>
-        </div>
-        <div class="d-flex justify-content-center h-auto">
-            <table class="table">
-                <thead>
-                <tr>
-                    <th> New Happy Hours</th>
-                </tr>
-                </thead>
-                <tbody>
-                <th:block th:each="happy : ${happyHours}">
+       <div class="d-flex flex-column" >
+            <div th:replace="fragments :: navbar"></div>
+            <div class="d-flex flex-column justify-content-center h-100">
+                <div th:replace="fragments :: search"></div>
+                <table class="table">
+                    <thead>
                     <tr>
-                        <td>
-                            <a th:href="@{'/user-view/'+${happy.id}}" th:text="${happy}" class="btn btn-secondary " role="button" ></a>
-                        </td>
+                        <th> New Happy Hours</th>
                     </tr>
-                </th:block>
-                </tbody>
-            </table>
-        </div>
-        <div class="d-flex justify-content-center">
-            <a th:href="@{'/owner-registration'}" th:text="'Want to add your Happy Hour?'" class="btn btn-primary " role="button"></a>
+                    </thead>
+                    <tbody>
+                    <th:block th:each="happy : ${happyHours}">
+                        <tr>
+                            <td>
+                                <a th:href="@{'/user-view/'+${happy.id}}" th:text="${happy}" class="btn btn-secondary " role="button" ></a>
+                            </td>
+                        </tr>
+                    </th:block>
+                    </tbody>
+                </table>
+                <div class="d-flex justify-content-center">
+                    <a th:href="@{'/owner-registration'}" th:text="'Want to add your Happy Hour?'" class="btn btn-primary " role="button"></a>
+                </div>
+            </div>
         </div>
     </div>
-</div>
 </body>
 </html>
