--- a/Happy-Hour/src/main/resources/templates/fragments.html
+++ b/Happy-Hour/src/main/resources/templates/fragments.html
@@ -12,7 +12,9 @@
 
     <link th:href="@{/css/bootstrap.css}" rel="stylesheet" />
     <link th:href="@{/css/happyhour.css}" rel="stylesheet"/>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'/>
+
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 
     <script type="text/javascript" th:src="@{/js/bootstrap.js}"></script></head>
 </div>
@@ -21,12 +23,22 @@
     <h1>Happy Hour Locator</h1>
 </div>
 
-<div th:fragment="navbar" class="navbar-header d-flex justify-content-flex-start text-center mb-4 w-100">
-    <a th:href="@{/}" class="navbar-brand m-0 px-1 border">Home</a>
-    <p th:text="${title}" class="navbar-brand m-0 w-100 border"></p>
-    <a class="nav-link" th:href="@{/owner-login}" sec:authorize="!isAuthenticated()">Log In</a>
-<!--    <form th:action= method="post" name="logoutForm"></form>-->
-    <a class="nav-link" th:href="@{/logout}" sec:authorize="isAuthenticated()" >Log Out</a>
+<div th:fragment="navbar" >
+    <nav class="navbar navbar-expand-sm bg-light navbar-light justify-content-between">
+
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a th:href="@{/}" class="nav-link">Home</a>
+            </li>
+        </ul>
+        <a class="navbar-brand">Happy Meower</a>
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/owner-login}" sec:authorize="!isAuthenticated()">Log In</a>
+                <a class="nav-link" th:href="@{/logout}" sec:authorize="isAuthenticated()" >Log Out</a>
+            </li>
+        </ul>
+    </nav>
 </div>
 <div th:fragment="search">
     <form th:action="@{results}" method="post" class="d-flex flex-column">
