--- a/Happy-Hour/src/main/resources/templates/owner-home.html
+++ b/Happy-Hour/src/main/resources/templates/owner-home.html
@@ -4,7 +4,7 @@
 
 <title th:text="${title}"></title>
 
-<body class="container bg" style="font-family: Comic Sans MS, Comic Sans, cursive; font-weight: bold; color: white;">
+<body class="container bg">
 
         <div th:replace="fragments :: navbar"></div>
 
