--- a/Happy-Hour/src/main/resources/templates/user-view.html
+++ b/Happy-Hour/src/main/resources/templates/user-view.html
@@ -3,9 +3,9 @@
 <head th:replace="fragments :: head">
 </head>
 <title th:text="${title}"></title>
-<body >
-<div class="bg">
-    <div th:replace="fragments :: navbar"></div>
+<body>
+<div th:replace="fragments :: navbar"></div>
+<div>
     <div class="container">
         <div class="d-flex justify-content-center h-auto pb-5">
             <table class="table">
