--- a/Happy-Hour/src/main/resources/templates/index.html
+++ b/Happy-Hour/src/main/resources/templates/index.html
@@ -2,31 +2,25 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org/"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
-<head th:replace="fragments :: head">
-</head>
+<head th:replace="fragments :: head"></head>
+
 <title th:text="${title}"></title>
-<body >
-<div class="bg">
-    <div class="container h-100" >
-        <div class="d-flex justify-content-end p-2" >
-            <div>
-                <a class="nav-link" th:href="@{/owner-login}" sec:authorize="!isAuthenticated()">Log In</a>
-                <form th:action="@{/logout}" method="post" name="logoutForm"></form>
-                <a class="nav-link" href="#" sec:authorize="isAuthenticated()"  onclick="document.logoutForm.submit()">Log Out</a>
-            </div>
-<!--            <a th:href="@{'/owner-login'}" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Login</a>-->
-        </div>
+
+<body id="index-background">
+<div th:replace="fragments :: navbar"></div>
+<div>
+    <div>
 
 <!--        SAMPLE VERSION OF USE-->
 <!--        <div sec:authorize="isAuthenticated()">-->
 <!--            <span sec:authentication="name"></span>-->
 <!--            This content is only shown to authenticated users.-->
 <!--        </div>-->
-        <div class="d-flex justify-content-center" style="height:25%">
+        <div>
             <div th:replace="fragments :: search"></div>
         </div>
-        <div class="d-flex justify-content-center h-auto">
-            <table class="table">
+        <div>
+            <table>
                 <thead>
                 <tr>
                     <th> New Happy Hours</th>
