added new fonts to the fragment head

--- a/Happy-Hour/src/main/resources/templates/fragments.html
+++ b/Happy-Hour/src/main/resources/templates/fragments.html
@@ -15,6 +15,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link href="https://fonts.googleapis.com/css?family=Aclonica" rel="stylesheet"/>
         <link href='https://fonts.googleapis.com/css?family=Alatsi' rel='stylesheet'/>
+        <link href='https://fonts.googleapis.com/css?family=Alata' rel='stylesheet'/>
+        <link href='https://fonts.googleapis.com/css?family=Acme' rel='stylesheet'/>
+        <link href='https://fonts.googleapis.com/css?family=Lilita One' rel='stylesheet'/>
 
     <script type="text/javascript" th:src="@{/js/bootstrap.js}"></script></head>
 </div>
