continued clearing of inline css, fixed navbar cover up, added standard backgroud color to all pages

--- a/Happy-Hour/src/main/resources/static/css/happyhour.css
+++ b/Happy-Hour/src/main/resources/static/css/happyhour.css
@@ -19,6 +19,10 @@ body {
     padding-top: 20px;
 }
 
+.navbar-bump {
+    padding-top: 100px;
+}
+
 li {
     list-style: none;
     display: inline-block;
