--- a/Happy-Hour/src/main/resources/templates/fragments.html
+++ b/Happy-Hour/src/main/resources/templates/fragments.html
@@ -40,6 +40,8 @@
     </div>
 </div>
 
+<div th:fragment="navbar-bump" class="navbar-bump"></div>
+
 <div th:fragment="search">
     <form th:action="@{results}" method="post" class="d-flex flex-column">
         <div class="searchbar">
