--- a/Happy-Hour/src/main/resources/static/css/happyhour.css
+++ b/Happy-Hour/src/main/resources/static/css/happyhour.css
@@ -1,22 +1,11 @@
-body {
-    margin: 0px;
-    padding: 0px;
-}
 
-#navbar {
-    top: 0px;
-    left: 0px;
-    right: 0px;
-    width: 100%
-    height: 100px;
-    z-index: 999;
-    background-color: white;
-    position: fixed;
-}
-
-#navbar #nav {
-    float: right;
-    padding-top: 20px;
+.bg{
+    background-color: #34cfeb;
+     background-image: url("/img/HappyHourBG.png");
+     background-position: center;
+     background-repeat: no-repeat;
+     background-size: auto 100%;
+     padding-top: 56px;
 }
 
 .navbar-bump {
@@ -39,15 +28,39 @@ li a:hover {
     color: #33ccff;
 }
 
-#index-background {
-    margin: 0px;
-    padding: 0px;
-    background-color: #34cfeb;
-}
-
-#logo {
+.navbar-brand {
     font-family: Aclonica;
     font-size: 35px;
-    float: left;
-    padding-top: 10px;
+}
+.searchbar{
+    margin-bottom: auto;
+    margin-top: auto;
+    height: 60px;
+    background-color: #FFFFFF;
+    border-radius: 30px;
+    padding: 10px;
+}
+
+.search_input{
+    color: black;
+    border: 0;
+    outline: 0;
+    background: none;
+    width: 450px;
+    padding: 0 10px;
+    caret-color:transparent;
+    line-height: 40px;
+    transition: width 0.4s linear;
+}
+
+.search_icon{
+    height: 40px;
+    width: 40px;
+    float: right;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    color: #e74c3c;
+    text-decoration:none;
 }
