--- a/Happy-Hour/src/main/resources/templates/fragments.html
+++ b/Happy-Hour/src/main/resources/templates/fragments.html
@@ -3,54 +3,55 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
 
-<div th:fragment="head">
+<head th:fragment="head">
     <!-- Bootstrap stylesheets and script -->
 
-    <head>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link th:href="@{/css/bootstrap.css}" rel="stylesheet" />
     <link th:href="@{/css/happyhour.css}" rel="stylesheet"/>
-        <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'/>
 
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-        <link href="https://fonts.googleapis.com/css?family=Aclonica" rel="stylesheet"/>
-        <link href='https://fonts.googleapis.com/css?family=Alatsi' rel='stylesheet'/>
-        <link href='https://fonts.googleapis.com/css?family=Alata' rel='stylesheet'/>
-        <link href='https://fonts.googleapis.com/css?family=Acme' rel='stylesheet'/>
-        <link href='https://fonts.googleapis.com/css?family=Lilita One' rel='stylesheet'/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Aclonica" rel="stylesheet"/>
+       <link href='https://fonts.googleapis.com/css?family=Alatsi' rel='stylesheet'/>
+       <link href='https://fonts.googleapis.com/css?family=Alata' rel='stylesheet'/>
+       <link href='https://fonts.googleapis.com/css?family=Acme' rel='stylesheet'/>
+       <link href='https://fonts.googleapis.com/css?family=Lilita_One' rel='stylesheet'/>
 
-    <script type="text/javascript" th:src="@{/js/bootstrap.js}"></script></head>
-</div>
+    <script type="text/javascript" th:src="@{/js/bootstrap.js}"></script>
+</head>
 
 <div th:fragment="header" class="page-header text-center my-5">
     <h1>Happy Hour Locator</h1>
 </div>
 
-<div th:fragment="navbar" id="navbar">
-    <div id="logo">
-        Happy Meower
-    </div>
-    <div id="nav">
-        <ul>
-            <li><a th:href="@{/}">Search Home</a></li>
-            <li><a th:href="@{/owner-home}">Owner Home</a></li>
-            <li><a th:href="@{/owner-login}" sec:authorize="!isAuthenticated()">Log In</a>
-                <a th:href="@{/logout}" sec:authorize="isAuthenticated()" >Log Out</a></li>
+<div th:fragment="navbar" >
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top
+    justify-content-between">
+        <div class="navbar-brand">Happy Meower</div>
+        <ul class="navbar-nav">
+
+                <li><a th:href="@{/}">Search Home</a></li>
+                <li><a th:href="@{/owner-home}">Owner Home</a></li>
+                <li><a th:href="@{/owner-login}" sec:authorize="!isAuthenticated()">Log In</a>
+                    <a th:href="@{/logout}" sec:authorize="isAuthenticated()" >Log Out</a></li>
+
         </ul>
-    </div>
+    </nav>
 </div>
 
 <div th:fragment="navbar-bump" class="navbar-bump"></div>
 
 <div th:fragment="search">
+    <div class="d-flex justify-content-center">
     <form th:action="@{results}" method="post" class="d-flex flex-column">
         <div class="searchbar">
             <input class="search_input" type="text" name="searchTerm" placeholder="Search Happy Hours Near You">
             <button class="search_icon" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-        </div><ul id="indexDay">
+        </div>
+        <ul id="indexDay">
         <li th:each="day:${dayOfWeek}" >
             <label th:text="${day}"></label>
             <input type="radio" name="dayOfWeek" th:value="${day}"  />
@@ -58,6 +59,7 @@
     </ul>
 
     </form>
+    </div>
 </div>
 
 <div th:fragment="map">
