--- a/Happy-Hour/src/main/resources/templates/owner-home.html
+++ b/Happy-Hour/src/main/resources/templates/owner-home.html
@@ -4,11 +4,9 @@
 
 <title th:text="${title}"></title>
 
-<body id="index-background">
+<body class="index-background">
 
     <div th:replace="fragments :: navbar"></div>
-
-    <div th:replace="fragments :: navbar-bump"></div>
 
         <div class="d-flex justify-content-end p-2" >
 </div>
