--- a/Happy-Hour/src/main/resources/templates/results.html
+++ b/Happy-Hour/src/main/resources/templates/results.html
@@ -3,11 +3,9 @@
 <head th:replace="fragments :: head">
 </head>
 <title th:text="${title}"></title>
-<body id="index-background">
+<body class="index-background">
 
 <div th:replace="fragments :: navbar"></div>
-
-<div th:replace="fragments :: navbar-bump"></div>
 
     <div class="bg">
         <div th:replace="fragments :: header"></div>
