--- a/Happy-Hour/src/main/resources/templates/user-view.html
+++ b/Happy-Hour/src/main/resources/templates/user-view.html
@@ -3,11 +3,10 @@
 <head th:replace="fragments :: head">
 </head>
 <title th:text="${title}"></title>
-<body id="index-background">
+<body class="index-background">
 
 <div th:replace="fragments :: navbar"></div>
 
-<div th:replace="fragments :: navbar-bump"></div>
 
 <div>
     <div class="container">
