--- a/Happy-Hour/src/main/resources/templates/index.html
+++ b/Happy-Hour/src/main/resources/templates/index.html
@@ -6,15 +6,15 @@
 
 <title th:text="${title}"></title>
 
-<body id="index-background">
+<body class="index-background">
 
     <div th:replace="fragments :: navbar"></div>
 
-    <div th:replace="fragments :: navbar-bump"></div>
-
+    <div class="d-flex flex-column vh-100">
+    <div class="d-flex flex-column-reverse h-50">
     <div th:replace="fragments :: search"></div>
-
-        <div>
+    </div>
+        <div class=>
             <table>
                 <thead>
                 <tr>
@@ -35,5 +35,6 @@
         <div class="d-flex justify-content-center">
             <a th:href="@{'/owner-registration'}" th:text="'Want to add your Happy Hour?'" class="btn btn-primary " role="button"></a>
         </div>
+    </div>
 </body>
 </html>
