--- a/Happy-Hour/src/main/resources/templates/owner-login.html
+++ b/Happy-Hour/src/main/resources/templates/owner-login.html
@@ -4,11 +4,9 @@
 
 <title th:text="${title}"></title>
 
-<body id="index-background">
+<body class="index-background">
 
     <div th:replace="fragments :: navbar"></div>
-
-    <div th:replace="fragments :: navbar-bump"></div>
 
         <div>
             <h3>Enter user name and password:</h3>
