--- a/Happy-Hour/src/main/resources/templates/owner-login.html
+++ b/Happy-Hour/src/main/resources/templates/owner-login.html
@@ -6,30 +6,34 @@
 
 <body class="index-background">
 
-    <div th:replace="fragments :: navbar"></div>
+<div th:replace="fragments :: navbar"></div>
 
-        <div>
-            <h3>Enter user name and password:</h3>
-            <form name='f' th:action="@{/j_spring_security_check}" method='POST'>
-                <table>
-                    <tr>
-                        <td>User:</td>
-                        <td><input type='text' name='username' value=''></td>
-                    </tr>
-                    <tr>
-                        <td>Password:</td>
-                        <td><input type='password' name='password' /></td>
-                    </tr>
-                    <tr>
-                        <td>Remember Me?</td>
-                        <td><input type="checkbox" name="remember-me" /></td>
-                    </tr>
-                    <tr>
-                        <td><input name="submit" type="submit" value="submit" /></td>
-                    </tr>
-                </table>
-            </form>
-        </div>
-        <p class="row d-flex justify-content-center my-2">Don't have an account?<a href="/owner-registration">Register for one.</a></p>
+<div class="vh-100 row align-items-center">
+    <div class="card bg-dark text-white mx-auto w-75 shadow-lg p-3 mb-5 rounded">
+        <img src="/img/login.png" class="card-img" alt=#>
+        <div class="card-img-overlay">
+            <div class="d-flex flex-row-reverse h-100">
+                <div class="align-self-center p-6">
+                    <h3>Happy Meower User Login</h3>
+                    <form name="f" th:action="@{/j_spring_security_check}" method='POST' >
+                        <div class="form-group">
+                            <label>User:
+                            <input class="form-control" type="text" name="username" value='' required></label>
+                        </div>
+                        <div class="form-group">
+                            <label>Password:
+                            <input class="form-control" type="password" name='password' required></label>
+                        </div>
+                        <div class="form-group">
+                            <label>Remember Me?</label>
+                            <input type="checkbox" name="remember-me">
+                        </div>
+                        <button name="submit" value="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                    <p class="row d-flex justify-content-center my-2">Don't have an account?<a href="/owner-registration">Register for one.</a></p>
+                </div></div></div>
+    </div>
+</div>
+
 </body>
 </html>
