--- a/Happy-Hour/src/main/resources/templates/owner-home.html
+++ b/Happy-Hour/src/main/resources/templates/owner-home.html
@@ -11,8 +11,8 @@
         <div class="d-flex justify-content-end p-2" >
 </div>
 <div class="container">
-    <div class="row">
-        <div class="col-xs-6">
+    <div class="d-flex">
+        <div class="d-flex rounded shadow p-2 bg-secondary w-25">
             <form method="post">
                 <label>CREATE NEW HAPPY HOUR</label>
                 <div class="form-group">
@@ -63,8 +63,8 @@
                 </div>
             </form>
         </div>
-        <div class="col-xs-12">
-            <table class="table">
+
+            <table class="table table-borderless">
                 <thead>
                 <tr>
                     <th scope="col">Business</th>
@@ -85,9 +85,9 @@
                                     </tr>
                 </tbody>
             </table>
-        </div>
+
     </div>
-</div></div>
+</div>
 
 </body>
 </html>
