--- a/Happy-Hour/src/main/resources/templates/owner-registration.html
+++ b/Happy-Hour/src/main/resources/templates/owner-registration.html
@@ -10,10 +10,10 @@
 
 <div class="vh-100 row align-items-center">
     <div class="card bg-dark text-white mx-auto w-75 shadow-lg p-3 mb-5 rounded">
-        <img src="/img/login.png" class="card-img" alt=#>
+        <img src="/img/reg.png" class="card-img" alt=#>
         <div class="card-img-overlay">
-            <div class="d-flex flex-row-reverse h-100">
-                <div class="align-self-center p-6">
+            <div class="d-flex h-100">
+                <div class="align-self-center p-5">
                 <h4>Register to add your own happy hour:</h4>
                     <p>Cats are restricted from the distribution and consumption of alcohol</p>
             <form method="post">
