--- a/Happy-Hour/src/main/resources/templates/owner-home.html
+++ b/Happy-Hour/src/main/resources/templates/owner-home.html
@@ -6,12 +6,12 @@
 
 <body class="index-background">
 
-    <div th:replace="fragments :: navbar"></div>
+<div th:replace="fragments :: navbar"></div>
 
-        <div class="d-flex justify-content-end p-2" >
-</div>
 <div class="container">
+    <h3 th:text="${title}"></h3>
     <div class="d-flex">
+
         <div class="d-flex rounded shadow p-2 bg-secondary w-25">
             <form method="post">
                 <label>CREATE NEW HAPPY HOUR</label>
@@ -68,10 +68,9 @@
                 <thead>
                 <tr>
                     <th scope="col">Business</th>
-                    <th scope="col">Days of Week</th>
-                    <th scope="col">Start Time</th>
-                    <th scope="col">End Time</th>
+                    <th scope="col">Times</th>
                     <th scope="col">Address</th>
+                    <th scope="col">Website</th>
                 </tr>
                 </thead>
                 <tbody>
